fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ h2, h3 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    height: 50vh;
     padding: 0rem;
 }
 
